tests/models/enum/named/i32/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(lt = 2)]
        value: i32
    },
}
fn main() {}
